[package]
name = "project"
version = "0.1.0"
authors = ["andreipc"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.126", features=["derive"]}
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
tokio = { version = "1.5.0", features = ["full"] }
serde_json = "1.0.64"
rand = "0.8.3"
tempfile = "3.2.0"
error-chain = "0.12.4"
executors = "0.9.0"
clap = "2.33.3"
whoami = "1.1.2"

[profile.release]
opt-level = 3

